<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"

                android:background="@drawable/circle"
                android:padding="10dp"
                android:src="@drawable/logo1" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextViewLargeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_address"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextViewMediumTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_adress_om_namo"></android.support.v7.widget.AppCompatTextView>

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextViewLargeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_address1"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextViewMediumTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_adress_om_namo1"></android.support.v7.widget.AppCompatTextView>

            <LinearLayout
                android:id="@+id/llContactWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:src="@drawable/ic_web"
                    android:tint="#a32740" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvContactWeb"
                    style="@style/TextViewMediumTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_web"
                    android:textColor="@color/green_dark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContactEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:src="@drawable/ic_web"
                    android:tint="#a32740" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvContactEmail"
                    style="@style/TextViewMediumTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_email"
                    android:textColor="@color/green_dark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContactTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:src="@drawable/ic_phone"
                    android:tint="#a32740" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvContactPhone"
                    style="@style/TextViewMediumTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone_1"
                    android:textColor="@color/green_dark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContactTel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:src="@drawable/ic_phone"
                    android:tint="#a32740" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvContactPhone2"
                    style="@style/TextViewMediumTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone_2"
                    android:textColor="@color/green_dark" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/llEmailIdOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:src="@drawable/ic_email"
                    android:tint="#a32740" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvEmailIdOne"
                    style="@style/TextViewMediumTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_web"
                    android:textColor="@color/green_dark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEmailIdTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:src="@drawable/ic_email"
                    android:tint="#a32740" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvEmailIdTwo"
                    style="@style/TextViewMediumTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_email_id_two"
                    android:textColor="@color/green_dark" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>

